--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -10,7 +10,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <title><%= cloudname %> | Admin</title>
+    <title><%= cloudname %> | <%= lang["Admin-Panel"] %></title>
 </head>
 <body>
     <style>
@@ -337,37 +337,37 @@ input[id="searchBar"] {
 .material-icons.md-36 { font-size: 36px;   margin-top: 20px;}
     </style>
     <h1><%= cloudname %></h1>
-    <h2 class="subtitle">Admin Panel</h2>
-    <h2 class="stats">Stats</h2>
+    <h2 class="subtitle"><%= lang["Admin-Panel"] %></h2>
+    <h2 class="stats"><%= lang["Stats"] %></h2>
     <table class="statstable">
       <thead>
-        <th>Name</th>
-        <th>Value</th>
+        <th><%= lang["Name"] %></th>
+        <th><%= lang["Value"] %></th>
       </thead>
       <tbody>
         <tr>
-          <td>Ram Usage</td>
+          <td><%= lang["Ram-Usage"] %></td>
           <td><%= Math.round(process.memoryUsage().heapUsed / 1024 / 1024) %> MB </td>
         </tr>
         <tr>
-          <td>CPU Usage</td> 
+          <td><%= lang["CPU-Usage"] %></td> 
           <td><%= cpuUsage.toString() %> % </td> 
         </tr>
         <tr>
-          <td>Uptime</td>
+          <td><%= lang["Uptime"] %></td>
           <td><%= ms(ms(Math.floor(process.uptime()).toString() + "s"), {long: true}) %></td> 
         </tr>
         <tr>
-          <td>Version</td>
+          <td><%= lang["Version"] %></td>
           <% if (packages.version == stableVersion) { %> 
           <td>v<%= packages.version %> </td>
           <% } else { %>
-            <td>v<%= packages.version %> | <a href=<%= "https://github.com/DaneeSkripter/DaneeCloud/releases/tag/v" + stableVersion %>>v<%= stableVersion %> available!</a></td> 
+            <td>v<%= packages.version %> | <a href=<%= "https://github.com/DaneeSkripter/DaneeCloud/releases/tag/v" + stableVersion %>>v<%= stableVersion %> <%= lang["Is-Available"] %>!</a></td> 
         <% } %> 
         </tr>
       </tbody>
     </table>
-    <h2 class="usr">User management</h2>
+    <h2 class="usr"><%= lang["User-Managment"] %></h2>
     <script>
       function searchBar() {
   // Declare variables
@@ -391,19 +391,19 @@ input[id="searchBar"] {
   }
 }
     </script>
-    <input type="text" id="searchBar" onkeyup="searchBar()" placeholder="Search for username">
+    <input type="text" id="searchBar" onkeyup="searchBar()" placeholder=<%= lang["Seach-Username"] %>>
     <table class="usrtable" id="users">
         <thead>
         <tr>
-          <th>Profile picture</th>
-          <th>Account username</th>
-          <th>Account email</th>
-          <th>Is verified?</th>
-          <th>IP address</th>
-          <th>Created at</th>
-          <th>Last seen</th>
-          <th>Role</th>
-          <th>Actions</th>
+          <th><%= lang["Profile-Picture"] %></th>
+          <th><%= lang["Username"] %></th>
+          <th><%= lang["Email"] %></th>
+          <th><%= lang["Is-Verified"] %></th>
+          <th><%= lang["IP"] %></th>
+          <th><%= lang["Created-At"] %></th>
+          <th><%= lang["Last-Seen"] %></th>
+          <th><%= lang["Role"] %></th>
+          <th><%= lang["Actions"] %></th>
         </tr>
       </thead>
       <tbody>
@@ -415,9 +415,9 @@ input[id="searchBar"] {
           <% let userrole = user.role %>
           <% let isverified; %>    
           <% if (user.isVerified) { %>
-            <% isverified = "Yes" %>
+            <% isverified = lang["Yes"] %>
           <% } else { %>  
-            <% isverified = "No" %>
+            <% isverified = lang["No"] %>
           <% } %>   
           <tr>
             <% let badge = roles.filter((obj) => {return obj.name == user.role})[0].badge   %>
@@ -441,12 +441,12 @@ input[id="searchBar"] {
           
       </tbody>
       </table>
-      <h2 class="storageplans">Roles</h2>
+      <h2 class="storageplans"><%= lang["Roles"] %></h2>
       <form action="/addrole/">
-      <input type="submit" class="add" value="Add role"></input>
+      <input type="submit" class="add" value=<%= lang["Add-Role"] %>></input>
     </form>
     <form action="/delrole/">
-      <input type="submit" class="del" value="Remove role"></input>
+      <input type="submit" class="del" value=<%= lang["Remove-Role"] %>></input>
     </form>
       <form action="/updaterole/" method="post">
         <select name="role">
@@ -456,19 +456,19 @@ input[id="searchBar"] {
         </select>
         <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
         <input type="text" id="maxStorage" name="maxStorage" required placeholder="128 MB"></input><h2 class="mb">MB</h2>
-        <label for="badge"><span class="material-icons">verified</span>&nbsp;URL of badge (not required)</label>
+        <label for="badge"><span class="material-icons">verified</span>&nbsp;<%= lang["Badge-URL"] %></label>
         <input type="text", id="badge", name="badge"></input>
-        <input type="submit" class="setasdefault" value="Update role"></input>
+        <input type="submit" class="setasdefault" value=<%= lang["Update-Role"] %>></input>
       </form>
-      <h2 class="storageplans">API Keys</h2>
+      <h2 class="storageplans"><%= lang["API-Keys"] %></h2>
       <form action="/addapikey/">
-        <input type="submit" class="back" value="Add API key"></input>
+        <input type="submit" class="back" value=<%= lang["Add-Api-Key"] %>></input>
       </form> 
     <table class="usrtable">
         <thead>
           <tr>
-            <th>API Key name</th>
-            <th>Actions</th>
+            <th><%= lang["API-Key-Name"] %></th>
+            <th><%= lang["Actions"] %></th>
           </tr>
         </thead>
         <tbody>
@@ -482,7 +482,7 @@ input[id="searchBar"] {
         </tbody>
       </table>
       <form action="/">
-        <input type="submit" class="back" href="/" value="Back to home page"></input>
+        <input type="submit" class="back" href="/" value=<%= lang["Back"] %>></input>
         </form>
     <footer>
              <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
