--- a/views/addsubtitles.ejs
+++ b/views/addsubtitles.ejs
@@ -10,7 +10,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <title><%= cloudname %> | Add subtitles</title>
+    <title><%= cloudname %> | <%= lang["Add-Subtitles"] %></title>
 </head>
 <body>
     <style>
@@ -174,19 +174,19 @@ button[id="add"]:hover {
 
     </style>
     <h1><%= cloudname %></h1>
-    <h2 class="subtitle">Add subtitles for <%= req.params.file %></h2>
+    <h2 class="subtitle"><%= lang["Add-Subtitles-For"] %> <%= req.params.file %></h2>
     <% let link = `/addsubtitles/${req.user.username}/${req.params.file}` %>
     <form action=<%= link %> method="post">
         <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
-        <label for="name"><span class="material-icons">edit</span>&nbsp;Subtitles name</label>
+        <label for="name"><span class="material-icons">edit</span>&nbsp;<%= lang["Subtitles-Name"] %></label>
         <input type="text" id="name" name="name" required></input>
-        <label for="url"><span class="material-icons">link</span>&nbsp;Subtitles URL</label>
+        <label for="url"><span class="material-icons">link</span>&nbsp;<%= lang["Subtitles-URL"] %></label>
         <input type="text", id="url", name="url" required></input>
-        <p>Works only with .vtt</p>
+        <p><%= lang["Works-Only-With"] %></p>
         <div style="margin: 0 auto; text-align: center">
-        <a href="https://docs.daneeskripter.dev/daneecloud/subtitlesfromfile">Want subtitles from file?</a>
+        <a href="https://docs.daneeskripter.dev/daneecloud/subtitlesfromfile"><%= lang["Want-Subtitles"] %></a>
         </div>
-        <button type="submit" id="add"><span class="material-icons">add</span>&nbsp;Add subtitles</button>
+        <button type="submit" id="add"><span class="material-icons">add</span>&nbsp;<%= lang["Add-Subtitles"] %></button>
     </form>
     <footer>
         <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
