--- a/views/audio.ejs
+++ b/views/audio.ejs
@@ -120,12 +120,12 @@ audio {
         </head>
         <body>
             <h1><%= cloudname %></h1>
-            <h2>Upload & Download your files!</h2>
+            <h2><%= lang["Upload-And-Download"] %></h2>
             <audio controls preload="metadata">
                 <source src=<%= "/files/" + username + "/" + file %>>
             </audio>
             <form action="/">
-            <input type="submit" href="/" value="Back to home page"></input>
+            <input type="submit" href="/" value=<%= lang["Back"] %>></input>
             </form>
             <footer>
                      <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
