--- a/views/delrole.ejs
+++ b/views/delrole.ejs
@@ -10,7 +10,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <title><%= cloudname %> | Delete role</title>
+    <title><%= cloudname %> | <%= lang["Delete-Role"] %></title>
 </head>
 <body>
     <style>
@@ -118,7 +118,7 @@ select {
 
     </style>
     <h1><%= cloudname %></h1>
-    <h2 class="subtitle">Delete role </h2>
+    <h2 class="subtitle"><%= lang["Delete-Role"] %></h2>
     <form action="/delrole/" method="post">
     <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
     <select name="role">
@@ -126,7 +126,7 @@ select {
             <option value=<%= role.name %>><%= role.name %> | <%= role.maxStorage %> MB</option>
         <% } %>
     </select>
-    <button type="submit" id="add"><span class="material-icons">delete</span>&nbsp;Delete role</button>
+    <button type="submit" id="add"><span class="material-icons">delete</span>&nbsp;<%= lang["Delete-Role"] %></button>
     </form>
     <footer>
                <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
