--- a/views/message.ejs
+++ b/views/message.ejs
@@ -46,7 +46,7 @@
           font-size: large;
       
       }
-      input[type="submit"] {
+      button[type="submit"] {
         color: white;
     height: 60px;
     width: 250px;
@@ -65,7 +65,7 @@
     border:0cm
     }
     
-    input[type="submit"]:hover {
+    button[type="submit"]:hover {
         color: #5D3FD3;
     height: 60px;
     width: 250px;
@@ -115,7 +115,7 @@
             <h2>Upload & Download your files!</h2>
             <h3><%- message %> </h3>
             <form action="/">
-            <input type="submit" href="/" value=<%= lang["Back"] %>></input>
+            <button type="submit" href="/" value=<%= lang["Back"] %>></button>
             </form>
             <footer>
                      <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
