--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,6 +10,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <title><%= cloudname %> | <%= lang["Log-In"] %></title>
 </head>
 <body>
@@ -162,11 +163,25 @@ a {
  }
 
 
+div {
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+ }
+
     </style>
     <h1><%= cloudname %></h1>
     <% if (messages.error) {%>
     <%= messages.error %>
     <% } %>  
+    <script>
+        window.addEventListener('load', () => {
+            const $recaptcha = document.querySelector('#g-recaptcha-response');
+            if ($recaptcha) {
+                $recaptcha.setAttribute('required', 'required');
+            }
+        })
+    </script>
     <h2 class="subtitle"><%= lang["Log-In"] %></h2>
     <form action="/login" method="post">
         <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
@@ -174,6 +189,8 @@ a {
         <input type="text", id="name", name="name" required></input>
         <label for="password"><span class="material-icons">lock</span>&nbsp;<%= lang["Password"] %></label>
         <input type="password", id="password", name="password" required></input>
+        <div class="g-recaptcha" data-sitekey=<%= RCAPTCHA_SITE_KEY %>></div>
+        <br/>
         <button type="submit" id="login"><span class="material-icons">login</span>&nbsp;<%= lang["Log-In"] %></button>
     </form>
     <a href="/register"><%= lang["noaccount"] %></a>
