--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,6 +10,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <title><%= cloudname %> | <%= lang["Register"] %></title>
 </head>
 <body>
@@ -180,11 +181,23 @@ button[id="register"]:hover {
     text-align: center; 
  }
 
-
+ div {
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+ }
 
     </style>
     <h1><%= cloudname %></h1>
     <h2 class="subtitle"><%= lang["Register"] %></h2>
+    <script>
+        window.addEventListener('load', () => {
+            const $recaptcha = document.querySelector('#g-recaptcha-response');
+            if ($recaptcha) {
+                $recaptcha.setAttribute('required', 'required');
+            }
+        })
+    </script>
     <form action="/register" method="post">
         <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
         <label for="name"><span class="material-icons">account_circle</span>&nbsp;<%= lang["Username2"] %></label>
@@ -193,6 +206,8 @@ button[id="register"]:hover {
         <input type="email", id="email", name="email" required></input>
         <label for="password"><span class="material-icons">lock</span>&nbsp;<%= lang["Password"] %></label>
         <input type="password", id="password", name="password" required></input>
+        <div class="g-recaptcha" data-sitekey=<%= RCAPTCHA_SITE_KEY %>></div>
+        <br/>
         <button type="submit" id="register"><span class="material-icons">how_to_reg</span>&nbsp;<%= lang["Register"] %></button>
     </form>
     <footer>
