--- a/views/login.ejs
+++ b/views/login.ejs
@@ -174,6 +174,7 @@ div {
     <% if (messages.error) {%>
     <%= messages.error %>
     <% } %>  
+    <% if (config.enableRecaptcha) { %>
     <script>
         window.addEventListener('load', () => {
             const $recaptcha = document.querySelector('#g-recaptcha-response');
@@ -182,6 +183,7 @@ div {
             }
         })
     </script>
+    <% } %>
     <h2 class="subtitle"><%= lang["Log-In"] %></h2>
     <form action="/login" method="post">
         <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
@@ -189,8 +191,10 @@ div {
         <input type="text", id="name", name="name" required></input>
         <label for="password"><span class="material-icons">lock</span>&nbsp;<%= lang["Password"] %></label>
         <input type="password", id="password", name="password" required></input>
+        <% if (config.enableRecaptcha) { %>
         <div class="g-recaptcha" data-sitekey=<%= RCAPTCHA_SITE_KEY %>></div>
         <br/>
+        <% } %>
         <button type="submit" id="login"><span class="material-icons">login</span>&nbsp;<%= lang["Log-In"] %></button>
     </form>
     <a href="/register"><%= lang["noaccount"] %></a>
