--- a/views/register.ejs
+++ b/views/register.ejs
@@ -190,6 +190,7 @@ button[id="register"]:hover {
     </style>
     <h1><%= cloudname %></h1>
     <h2 class="subtitle"><%= lang["Register"] %></h2>
+    <% if (config.enableRecaptcha) { %>
     <script>
         window.addEventListener('load', () => {
             const $recaptcha = document.querySelector('#g-recaptcha-response');
@@ -198,6 +199,7 @@ button[id="register"]:hover {
             }
         })
     </script>
+    <% } %>
     <form action="/register" method="post">
         <input name="_csrf" value=<%= csrfToken %> type="hidden"/>
         <label for="name"><span class="material-icons">account_circle</span>&nbsp;<%= lang["Username2"] %></label>
@@ -206,8 +208,10 @@ button[id="register"]:hover {
         <input type="email", id="email", name="email" required></input>
         <label for="password"><span class="material-icons">lock</span>&nbsp;<%= lang["Password"] %></label>
         <input type="password", id="password", name="password" required></input>
+        <% if (config.enableRecaptcha) { %>
         <div class="g-recaptcha" data-sitekey=<%= RCAPTCHA_SITE_KEY %>></div>
         <br/>
+        <% } %>
         <button type="submit" id="register"><span class="material-icons">how_to_reg</span>&nbsp;<%= lang["Register"] %></button>
     </form>
     <footer>
