back button text fixed

--- a/views/message.ejs
+++ b/views/message.ejs
@@ -115,7 +115,7 @@
             <h2>Upload & Download your files!</h2>
             <h3><%- message %> </h3>
             <form action="/">
-            <button type="submit" href="/" value=<%= lang["Back"] %>></button>
+            <button type="submit" href="/"><%= lang["Back"] %></button>
             </form>
             <footer>
                      <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
