--- a/views/folder.ejs
+++ b/views/folder.ejs
@@ -232,12 +232,12 @@ input[id="searchBar"] {
         <% let link8 = "/addsubtitles/" + `${req.user.username}/` + file %>
         <% let link9 = "/rmsubtitles/" + `${req.user.username}/` + file %>
         <% let isShared; %> 
-        <% let size = fs.statSync(__dirname + "/.."  + config.uploadsfolder + `${req.user.username}/` + file).size / (1024 * 1024) %> 
-        <% let fsDate = fs.statSync(__dirname + "/.."  + config.uploadsfolder + `${req.user.username}/` + file).birthtime %>
+        <% let size = fs.statSync(__dirname + "/.."  + config.uploadsfolder + `${req.user.username}/${folder}/` + file).size / (1024 * 1024) %> 
+        <% let fsDate = fs.statSync(__dirname + "/.."  + config.uploadsfolder + `${req.user.username}/${folder}/` + file).birthtime %>
         <% let creationDate = `${fsDate.getDate()}.${fsDate.getMonth() + 1}.${fsDate.getFullYear()}` %>
-        <% if (isImg(__dirname + "/.." + config.uploadsfolder + `${req.user.username}/` + file)) { %> 
-          <td><img src=<%= "/files/" + req.user.username + "/" + file%> ></td>
-        <% } else if (isVid(__dirname + "/.." + config.uploadsfolder + `${req.user.username}/` + file)) { %> 
+        <% if (isImg(__dirname + "/.." + config.uploadsfolder + `${req.user.username}/${folder}/` + file)) { %> 
+          <td><img src=<%= "/files/" + req.user.username + `/${folder}/` + file%> ></td>
+        <% } else if (isVid(__dirname + "/.." + config.uploadsfolder + `${req.user.username}/${folder}/` + file)) { %> 
           <% if (file.split(".").pop() == "mkv") {%> 
             <td><%= lang["Not-Supported"] %></td>
           <% } else { %>
